tests/fixtures/errors/RANGE_BRACKET_SPACE__B.tsl
DROP stick 2
 ON Donation
 WITH amount IN RANGE [100, 200]
